@@ -170,6 +170,30 @@
     </schema>
 
     <schema>
+      <key>/schemas/apps/gphotoframe/filter/min_width</key>
+      <applyto>/apps/gphotoframe/filter/min_width</applyto>
+      <owner>gphotoframe</owner>
+      <type>int</type>
+      <default>0</default>
+      <locale name="C">
+        <short>Minimum image width</short>
+        <long>Minimum image width.  When this value is less than 0, image size filter is disabled.</long>
+      </locale>
+    </schema>
+
+    <schema>
+      <key>/schemas/apps/gphotoframe/filter/min_height</key>
+      <applyto>/apps/gphotoframe/filter/min_height</applyto>
+      <owner>gphotoframe</owner>
+      <type>int</type>
+      <default>0</default>
+      <locale name="C">
+        <short>Minimum image height</short>
+        <long>Minimum image height.  When this value is less than 0, image size filter is disabled.</long>
+      </locale>
+    </schema>
+
+    <schema>
       <key>/schemas/apps/gphotoframe/plugins/flickr/interval</key>
       <applyto>/apps/gphotoframe/plugins/flickr/interval</applyto>
       <owner>gphotoframe</owner>
